Fix: nowrap when close nav

--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -22,6 +22,7 @@
   justify-content: space-between;
 
   #nav {
+    white-space: nowrap;
     transition-property: width;
     transition-duration: 0.2s;
     transition-timing-function: ease-out;
